<resources>
    <string name="game_name">HuntIt</string>

    <string name="mapbox_token">
        pk.eyJ1Ijoic2FpZmtoaWNoaTk2IiwiYSI6ImNqYnIwNnhsbDBtaWIzM3J0YXJjY3JiMGcifQ.sw44df657mub4lHohVyabA
    </string>
    <string name="mapbox_style_day">mapbox://styles/saifkhichi96/cjbr0gw688ba42rs74zg3mc9p</string>
    <string name="mapbox_style_night">mapbox://styles/saifkhichi96/cjbs0qca999072qqk62xrtote</string>

    <string name="hint_verification_code">Verification Code</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="check_phone_auth">Did not receive the code?</string>
    <string name="resend_phone_auth">Click here to resend</string>
    <string name="carrier_charges">Standard carrier charges may apply</string>
    <string name="instant_validation">Instant validation</string>
    <string name="start_phone_auth">Get Started</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="submit">Submit</string>
    <string name="loading">Loading …</string>
    <string name="sample_email">example@domain.com</string>
    <string name="label_friends">Friends</string>
    <string name="social_connect_none">You have not linked a social profile yet. Connect now to play with your friends.</string>
    <string name="label_connect_facebook">Connect to Facebook</string>
    <string name="label_statistics">Stats</string>
    <string name="label_user_since">Start Date:</string>
    <string name="label_total_xp">Total XP:</string>
    <string name="none">N/A</string>
    <string name="label_level">Level</string>
    <string name="label_shop">Shop</string>
    <string name="label_navigate">Navigate</string>
    <string name="label_items">Items</string>
    <string name="label_sign_out">Sign Out</string>
    <string name="company_name">by\nAspiraSoft</string>
    <string name="label_coins">Coins: 0</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">What should we call you?</string>
    <string name="label_facebook_info">Use Facebook Info</string>
    <string name="hint_password">Password</string>
    <string name="label_sign_in">Sign In</string>
    <string name="error_field_required">This field cannot be empty.</string>
    <string name="error_sign_in_failed">Sign in failed</string>
</resources>