<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_light">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/dismissButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_general_normal"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_action_close"
        app:tint="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_above="@id/dismissButton"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/label_navigate"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.0"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="24dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pauseButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="12dp"
                    android:scaleType="fitCenter"
                    app:backgroundTint="@color/colorAccent"
                    app:icon="@drawable/view_settings_navigate"
                    app:iconSize="24dp"
                    app:iconTint="@color/colorPrimary" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|top"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/label_shop"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.0"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="24dp">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="12dp"
                    android:scaleType="fitCenter"
                    app:backgroundTint="@color/colorAccent"
                    app:icon="@drawable/view_settings_shop"
                    app:iconSize="24dp"
                    app:iconTint="@color/colorPrimary" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/label_items"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.0"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="24dp">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="12dp"
                    android:scaleType="fitCenter"
                    app:backgroundTint="@color/colorAccent"
                    app:icon="@drawable/view_settings_items"
                    app:iconSize="24dp"
                    app:iconTint="@color/colorPrimary" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_out"
        style="@style/Widget.Material3.Button.TextButton.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/activity_margin_top"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/label_sign_out"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:icon="@drawable/ic_action_signout"
        app:iconGravity="end"
        app:iconPadding="8dp"
        app:iconSize="24dp"
        app:iconTint="@color/colorAccent" />

</RelativeLayout>